sonatype/iq-server/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sonatype
  name: iq-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: iq.pratz.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iq-iq-server-application-service
                port:
                  number: 8070
